[package]
name = "chrono-utb"
version = "0.1.0"
authors = ["fx_kirin <fx.kirin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
chrono = { version = "0.4.11", features = ["serde"] }
csv = "1.1.3"
easybench = "1.0.0"
